# OpenEMS

./: .clang-format  .editorconfig  .gitignore  .graphifyignore  0001-fix-corrige-13-issues-de-decode-sync-scheduling-revi.patch  BUGFIX_SUMMARY.md  CHANGELOG.md  CHANGELOG_BRANCH.md  CLAUDE.md  CLEANUP_SUMMARY.md  CMAKE_CORRECTIONS_SUMMARY.md  CMakeLists.txt  CMakeLists_test.txt  CODEBASE_REVIEW.md  CORRECOES_IMPLEMENTADAS.md  DEVELOPMENT_PLAN.md  ESP32-S3_GUIDE.md  FIXES_TODO.md  HAL_IMPLEMENTATION_PROGRESS.md  Handoff.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  MCPWM_SIMPLIFICATION_COMPLETE.md  Makefile  PHASE2_IMPLEMENTATION_REPORT.md  PHASE3_IMPLEMENTATION_REPORT.md  QUICK_CRANK_ANALYSIS.md  README.md  REVIEW_VALIDATION.md  github-issues.sh  integrate_esp_idf.sh  openems_reuse_analysis.md  openems_test_defs.h  partitions.csv  platformio.ini  run_all_tests.sh  sdkconfig.defaults  simple_esp_idf_test.c  simple_test  simple_test.c  (+23 more)
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.kilo/plans/: 1779901417737-silent-harbor.md
docs/: CHANGELOG.md  CLEANUP_COMPLETE.md  FASE1_ESTABILIZACAO_REPORT.md  HAL_IMPLEMENTATION_COMPLETE.md  HIGH_PRECISION_TIMING.md  HIGH_PRECISION_TIMING_INTEGRATION.md  OpenEMS_Engineering_Prompt_v1.2.docx  PHASE1_IMPLEMENTATION_REPORT.md  ROADMAP.md  acceptance_gate_checklist.md  bench_test_manual.md  closed_loop_fuel.md  eoit_calibration.md  fueling_system.md  wiring_diagram.md
docs/design/: cli_interface_design.md  data_logger_design.md  diagramas.md  espnow_module_design.md  testing_validation_design.md  tuning_protocol_design.md
docs/hw/: pinout.md  stm32h562_ref.md  vr_input_conditioning.md
docs/reference/: ESP32_Engine_Management.md  TECHNICAL_SPECIFICATION.md  WIRING.md
examples/: main_with_esp32s3.c
firmware/comms/: can_wideband.c  can_wideband.h  espnow_link.c  espnow_link.h  tunerstudio.c
firmware/config/: config_manager.c  engine_config.h
firmware/control/: closed_loop_fuel.c  closed_loop_fuel.h  engine_control.c  engine_control.h  fuel_calc.c  fuel_injection.c  fuel_injection.h  ignition_timing.c  ignition_timing.h
firmware/decoder/: trigger_60_2.c  trigger_60_2.h
firmware/diagnostics/: fault_manager.c  fault_manager.h
firmware/hal/: hal_gpio.h  hal_pins.h  hal_pwm.h
firmware/main/: main.c
firmware/scheduler/: event_scheduler.c  event_scheduler.h  hp_state.c  hp_state.h  hp_timing.h  ignition_driver.c  ignition_driver.h  ignition_driver_types.h  injector_driver.c  injector_driver.h  injector_driver_types.h
firmware/sensors/: sensor_processing.c  sensor_processing.h
firmware/tables/: map_storage.c  map_storage.h  table_16x16.c
firmware/utils/: atomic_buffer.h  cli_interface.c  logger.c  logger.h  test_framework.h
firmware_restructured/comms/: can_wideband.c  espnow_compression.c  espnow_compression.h  tunerstudio.c  tunerstudio.h
firmware_restructured/config/: config_manager.h  map_storage.c  table_16x16.h
firmware_restructured/control/: closed_loop_fuel.c  fuel_calc.c  fuel_calc.h  fuel_injection.c  fuel_injection.h  ignition_timing.c  ignition_timing.h
firmware_restructured/data_logging/: sd_logger.c  sd_logger.h
firmware_restructured/diagnostics/: fault_manager.c  fault_manager.h
firmware_restructured/drivers/: mcpwm_ignition_hp.c  mcpwm_ignition_hp.h  mcpwm_injection_hp.c  mcpwm_injection_hp.h
firmware_restructured/engine_core/: engine_control.c  engine_control.h  hp_state.c  hp_state.h
firmware_restructured/hal/: hal_gpio.h  hal_pins.h  hal_timer.h
firmware_restructured/integration/: esp32s3_integration.c  esp32s3_integration.h
firmware_restructured/main/: esp32s3_main_integration.c  esp32s3_main_integration.h
firmware_restructured/scheduler/: adaptive_timer.c  adaptive_timer.h  event_scheduler.c  event_scheduler.h  hp_timing.c  ignition_driver.c  injector_driver.c  precision_integration.c  precision_integration.h  precision_manager.c  precision_manager.h
firmware_restructured/sensors/: dsp_sensor_processing.c  dsp_sensor_processing.h  map_tps_filters.c  map_tps_filters.h  optimized_sensor_processing.h  trigger_60_2.c  trigger_60_2.h  ulp_monitor.c  ulp_monitor.h
firmware_restructured/utils/: cli_interface.c  cli_interface.h  latency_benchmark.c  latency_benchmark.h  math_utils.h  sync.h  test_framework.c  (+2 more)
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
linker/: stm32h562.ld
openems-v3/: CLAUDE.md  FINAL_STATUS.md  LOGIC_REVIEW_USB_ONLY.md  Makefile  PHASE1_STATUS.md  PHASE3_4_5_ROADMAP.md  PIPELINE_DEEP_REVIEW.md  README.md
scripts/: bridge.py  build_stm32h562.sh  run_host_tests.sh
src/: main.cpp  main_stm32.cpp  startup_stm32h562.cpp
test/: fixtures.cpp  fixtures.h  harness.cpp  harness.h  mvp_bench_tests.cpp  run_all.cpp  suite_registry.h  test_aux_knock.cpp  test_ckp.cpp  test_engine_misc.cpp  test_etb.cpp  test_fuel.cpp  test_ign.cpp  test_math.cpp  test_out_pins_vgt6.cpp  test_output.cpp  test_protocol.cpp  test_sched.cpp  test_sensors.cpp  test_spark_skip.cpp  test_timer.cpp  test_torque.cpp  ui_helpers.cpp  ui_helpers.h
test_results/: precision_adjustment_report.md  test_execution_report.md  validation_report.md
tests/: CMakeLists.txt  CMakeLists_esp_idf.txt  README.md  unity.h
tests/fixtures/: engine_test_data.c  engine_test_data.h
tests/integration/: test_core_communication.c
tests/mocks/: mock_esp_idf.h  mock_hal_gpio.c  mock_hal_gpio.h  mock_hal_timer.c  mock_hal_timer.h
tests/performance/: CMakeLists.txt  performance_tests_basic.c  performance_tests_runner  performance_tests_simple.c  performance_tests_working.c  run_performance_tests.sh  system_load_tests.c  timing_precision_tests.c
tests/scripts/: performance_report.py  run_tests.sh
tests/unit/drivers/: test_mcpwm_injection.c
tests/unit/scheduler/: test_event_scheduler.c
tests/unit/sensors/: test_trigger_60_2.c
tools/: angle_measure.py  ci_local.sh  fix_udev.sh  gen_tables_20x20.py  include_allowlist.txt  lint_includes.py  secrets_check.sh  verify_outputs.py
(+210 files in other folders)
